added OrganizationFile entity